--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <ul class="feature-list">
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" heigth="64">
-                    <use href="/images/symbol-defs.svg#icon-antenna"></use>
+                  <svg width="64" height="64">
+                    <use href="./images/symbol-defs.svg#icon-antenna"></use>
                   </svg>
                 </div>
                 <h3 class="item-title feature-list-title">Strategy</h3>
@@ -87,8 +87,8 @@
               </li>
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" heigth="64">
-                    <use href="/images/symbol-defs.svg#icon-clock"></use>
+                  <svg width="64" height="64">
+                    <use href="./images/symbol-defs.svg#icon-clock"></use>
                   </svg>
                 </div>
                 <h3 class="item-title feature-list-title">Punctuality</h3>
@@ -100,8 +100,8 @@
 
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" heigth="64">
-                    <use href="/images/symbol-defs.svg#icon-diagram"></use>
+                  <svg width="64" height="64">
+                    <use href="./images/symbol-defs.svg#icon-diagram"></use>
                   </svg>
                 </div>
                 <h3 class="item-title feature-list-title">Diligence</h3>
@@ -113,8 +113,8 @@
 
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" heigth="64">
-                    <use href="/images/symbol-defs.svg#icon-astronaut"></use>
+                  <svg width="64" height="64">
+                    <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                   </svg>
                 </div>
                 <h3 class="item-title feature-list-title">Technologies</h3>
@@ -142,7 +142,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-instagram"
+                            href="./images/symbol-defs.svg#icon-instagram"
                           ></use>
                         </svg>
                       </a>
@@ -152,7 +152,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-twitter"
+                            href="./images/symbol-defs.svg#icon-twitter"
                           ></use>
                         </svg>
                       </a>
@@ -160,9 +160,9 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" heigth="16">
+                        <svg width="16" height="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-facebook"
+                            href="./images/symbol-defs.svg#icon-facebook"
                           ></use>
                         </svg>
                       </a>
@@ -170,9 +170,9 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" heigth="16">
+                        <svg width="16" height="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-linkedin"
+                            href="./images/symbol-defs.svg#icon-linkedin"
                           ></use>
                         </svg>
                       </a>
@@ -192,7 +192,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-instagram"
+                            href="./images/symbol-defs.svg#icon-instagram"
                           ></use>
                         </svg>
                       </a>
@@ -202,7 +202,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-twitter"
+                            href="./images/symbol-defs.svg#icon-twitter"
                           ></use>
                         </svg>
                       </a>
@@ -212,7 +212,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" heigth="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-facebook"
+                            href="./images/symbol-defs.svg#icon-facebook"
                           ></use>
                         </svg>
                       </a>
@@ -222,7 +222,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" heigth="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-linkedin"
+                            href="./images/symbol-defs.svg#icon-linkedin"
                           ></use>
                         </svg>
                       </a>
@@ -240,7 +240,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-instagram"
+                            href="./images/symbol-defs.svg#icon-instagram"
                           ></use>
                         </svg>
                       </a>
@@ -250,7 +250,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-twitter"
+                            href="./images/symbol-defs.svg#icon-twitter"
                           ></use>
                         </svg>
                       </a>
@@ -260,7 +260,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" heigth="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-facebook"
+                            href="./images/symbol-defs.svg#icon-facebook"
                           ></use>
                         </svg>
                       </a>
@@ -270,7 +270,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" heigth="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-linkedin"
+                            href="./images/symbol-defs.svg#icon-linkedin"
                           ></use>
                         </svg>
                       </a>
@@ -288,7 +288,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-instagram"
+                            href="./images/symbol-defs.svg#icon-instagram"
                           ></use>
                         </svg>
                       </a>
@@ -298,7 +298,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-twitter"
+                            href="./images/symbol-defs.svg#icon-twitter"
                           ></use>
                         </svg>
                       </a>
@@ -308,7 +308,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" heigth="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-facebook"
+                            href="./images/symbol-defs.svg#icon-facebook"
                           ></use>
                         </svg>
                       </a>
@@ -318,7 +318,7 @@
                       <a class="team-social-link" href="">
                         <svg width="16" heigth="16">
                           <use
-                            href="/images/symbol-defs.svg#icon-linkedin"
+                            href="./images/symbol-defs.svg#icon-linkedin"
                           ></use>
                         </svg>
                       </a>
@@ -335,9 +335,14 @@
             <h2 class="portfolio-titel title">Our Portfolio</h2>
             <ul class="portfolio-list">
               <li class="portfolio-list-item">
-                <img src="./images/img-5.jpg" alt="Banking App " width="360" />
-                <div class="overlay">
-                  <p>
+                <div class="overlay-portfolio">
+                  <img
+                    src="./images/img-5.jpg"
+                    alt="Banking App "
+                    width="360"
+                  />
+
+                  <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -349,13 +354,14 @@
                 </div>
               </li>
               <li class="portfolio-list-item">
-                <img
-                  src="./images/img-4.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
-                <div class="overlay">
-                  <p>
+                <div class="overlay-portfolio">
+                  <img
+                    src="./images/img-4.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+
+                  <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -370,13 +376,14 @@
                 </div>
               </li>
               <li class="portfolio-list-item">
-                <img
-                  src="./images/img-3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
-                <div class="overlay">
-                  <p>
+                <div class="overlay-portfolio">
+                  <img
+                    src="./images/img-3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+
+                  <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -390,9 +397,14 @@
                 </div>
               </li>
               <li class="portfolio-list-item">
-                <img src="./images/img-2.jpg" alt="Taxi Service" width="360" />
-                <div class="overlay">
-                  <p>
+                <div class="overlay-portfolio">
+                  <img
+                    src="./images/img-2.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+
+                  <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -404,13 +416,14 @@
                 </div>
               </li>
               <li class="portfolio-list-item">
-                <img
-                  src="./images/img-1.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
-                <div class="overlay">
-                  <p>
+                <div class="overlay-portfolio">
+                  <img
+                    src="./images/img-1.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+
+                  <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -424,9 +437,13 @@
                 </div>
               </li>
               <li class="portfolio-list-item">
-                <img src="./images/img.jpg" alt="Online Courses" width="360" />
-                <div class="overlay">
-                  <p>
+                <div class="overlay-portfolio">
+                  <img
+                    src="./images/img.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -446,8 +463,8 @@
       <!--Footer-->
 
       <footer class="footer">
-        <div class="container">
-          <div class="footer-container">
+        <div class="container footer-container">
+          <div class="footer-container-logo">
             <a class="logo footer-logo" href="./index.html">
               Web<span class="footer-logo-item">Studio</span>
             </a>
@@ -457,36 +474,36 @@
             </p>
           </div>
           <div class="social-container">
-            <h3 class="footer-social-titel">Social media</h3>
+            <p class="footer-social-titel">Social media</p>
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" heigth="24">
-                    <use href="/images/symbol-defs.svg#icon-instagram"></use>
+                  <svg width="24" heigth="24" class="footer-icon">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
 
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" heigth="24">
-                    <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                  <svg width="24" heigth="24" class="footer-icon">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
 
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" heigth="24">
-                    <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                  <svg width="24" heigth="24" class="footer-icon">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
 
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" heigth="24">
-                    <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                  <svg width="24" heigth="24" class="footer-icon">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
