--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" heigth="16">
+                        <svg width="16" height="16">
                           <use
                             href="./images/symbol-defs.svg#icon-facebook"
                           ></use>
@@ -220,7 +220,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" heigth="16">
+                        <svg width="16" height="16">
                           <use
                             href="./images/symbol-defs.svg#icon-linkedin"
                           ></use>
@@ -258,7 +258,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" heigth="16">
+                        <svg width="16" height="16">
                           <use
                             href="./images/symbol-defs.svg#icon-facebook"
                           ></use>
@@ -268,7 +268,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" heigth="16">
+                        <svg width="16" height="16">
                           <use
                             href="./images/symbol-defs.svg#icon-linkedin"
                           ></use>
@@ -306,7 +306,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" heigth="16">
+                        <svg width="16" height="16">
                           <use
                             href="./images/symbol-defs.svg#icon-facebook"
                           ></use>
@@ -316,7 +316,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" heigth="16">
+                        <svg width="16" height="16">
                           <use
                             href="./images/symbol-defs.svg#icon-linkedin"
                           ></use>
@@ -478,7 +478,7 @@
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" heigth="24" class="footer-icon">
+                  <svg width="24" height="24" class="footer-icon">
                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
@@ -486,7 +486,7 @@
 
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" heigth="24" class="footer-icon">
+                  <svg width="24" height="24" class="footer-icon">
                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </a>
@@ -494,7 +494,7 @@
 
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" heigth="24" class="footer-icon">
+                  <svg width="24" height="24" class="footer-icon">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
@@ -502,7 +502,7 @@
 
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" heigth="24" class="footer-icon">
+                  <svg width="24" height="24" class="footer-icon">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </a>
