--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <ul class="feature-list">
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" height="64">
+                  <svg width="64" height="64" class="feature-icon">
                     <use href="./images/symbol-defs.svg#icon-antenna"></use>
                   </svg>
                 </div>
@@ -87,7 +87,7 @@
               </li>
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" height="64">
+                  <svg width="64" height="64" class="feature-icon">
                     <use href="./images/symbol-defs.svg#icon-clock"></use>
                   </svg>
                 </div>
@@ -100,7 +100,7 @@
 
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" height="64">
+                  <svg width="64" height="64" class="feature-icon">
                     <use href="./images/symbol-defs.svg#icon-diagram"></use>
                   </svg>
                 </div>
@@ -113,7 +113,7 @@
 
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" height="64">
+                  <svg width="64" height="64" class="feature-icon">
                     <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                   </svg>
                 </div>
