--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <li class="feature-list-items">
                 <div class="icon-feature">
                   <svg width="64" height="64" class="feature-icon">
-                    <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                    <use href="./images/icons.svg#icon-antenna"></use>
                   </svg>
                 </div>
                 <h3 class="item-title feature-list-title">Strategy</h3>
@@ -88,7 +88,7 @@
               <li class="feature-list-items">
                 <div class="icon-feature">
                   <svg width="64" height="64" class="feature-icon">
-                    <use href="./images/symbol-defs.svg#icon-clock"></use>
+                    <use href="./images/icons.svg#icon-clock"></use>
                   </svg>
                 </div>
                 <h3 class="item-title feature-list-title">Punctuality</h3>
@@ -101,7 +101,7 @@
               <li class="feature-list-items">
                 <div class="icon-feature">
                   <svg width="64" height="64" class="feature-icon">
-                    <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                    <use href="./images/icons.svg#icon-diagram"></use>
                   </svg>
                 </div>
                 <h3 class="item-title feature-list-title">Diligence</h3>
@@ -114,7 +114,7 @@
               <li class="feature-list-items">
                 <div class="icon-feature">
                   <svg width="64" height="64" class="feature-icon">
-                    <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                    <use href="./images/icons.svg#icon-astronaut"></use>
                   </svg>
                 </div>
                 <h3 class="item-title feature-list-title">Technologies</h3>
@@ -141,9 +141,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
@@ -151,9 +149,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-twitter"
-                          ></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -161,9 +157,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-facebook"
-                          ></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -171,9 +165,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-linkedin"
-                          ></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -191,9 +183,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
@@ -201,9 +191,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-twitter"
-                          ></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -211,9 +199,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-facebook"
-                          ></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -221,9 +207,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-linkedin"
-                          ></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -239,9 +223,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
@@ -249,9 +231,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-twitter"
-                          ></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -259,9 +239,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-facebook"
-                          ></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -269,9 +247,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-linkedin"
-                          ></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -287,9 +263,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-instagram"
-                          ></use>
+                          <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
@@ -297,9 +271,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-twitter"
-                          ></use>
+                          <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -307,9 +279,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-facebook"
-                          ></use>
+                          <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -317,9 +287,7 @@
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
                         <svg width="16" height="16">
-                          <use
-                            href="./images/symbol-defs.svg#icon-linkedin"
-                          ></use>
+                          <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -479,7 +447,7 @@
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
                   <svg width="24" height="24" class="footer-icon">
-                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -487,7 +455,7 @@
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
                   <svg width="24" height="24" class="footer-icon">
-                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
@@ -495,7 +463,7 @@
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
                   <svg width="24" height="24" class="footer-icon">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
@@ -503,7 +471,7 @@
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
                   <svg width="24" height="24" class="footer-icon">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
