--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <ul class="feature-list">
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" height="64" class="feature-icon">
+                  <svg width="64" height="64" class="icon">
                     <use href="./images/icons.svg#icon-antenna"></use>
                   </svg>
                 </div>
@@ -87,7 +87,7 @@
               </li>
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" height="64" class="feature-icon">
+                  <svg width="64" height="64" class="icon">
                     <use href="./images/icons.svg#icon-clock"></use>
                   </svg>
                 </div>
@@ -100,7 +100,7 @@
 
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" height="64" class="feature-icon">
+                  <svg width="64" height="64" class="icon">
                     <use href="./images/icons.svg#icon-diagram"></use>
                   </svg>
                 </div>
@@ -113,7 +113,7 @@
 
               <li class="feature-list-items">
                 <div class="icon-feature">
-                  <svg width="64" height="64" class="feature-icon">
+                  <svg width="64" height="64" class="icon">
                     <use href="./images/icons.svg#icon-astronaut"></use>
                   </svg>
                 </div>
@@ -140,7 +140,7 @@
                   <ul class="team-social-list">
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
@@ -148,7 +148,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
@@ -156,7 +156,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
@@ -164,7 +164,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -182,7 +182,7 @@
                   <ul class="team-social-list">
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
@@ -190,7 +190,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
@@ -198,7 +198,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
@@ -206,7 +206,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -222,7 +222,7 @@
                   <ul class="team-social-list">
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
@@ -230,7 +230,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
@@ -238,7 +238,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
@@ -246,7 +246,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -262,7 +262,7 @@
                   <ul class="team-social-list">
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
@@ -270,7 +270,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
@@ -278,7 +278,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
@@ -286,7 +286,7 @@
 
                     <li class="team-social-item">
                       <a class="team-social-link" href="">
-                        <svg width="16" height="16">
+                        <svg width="16" height="16" class="icon">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -446,7 +446,7 @@
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" height="24" class="footer-icon">
+                  <svg width="24" height="24" class="icon">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
@@ -454,7 +454,7 @@
 
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" height="24" class="footer-icon">
+                  <svg width="24" height="24" class="icon">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
@@ -462,7 +462,7 @@
 
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" height="24" class="footer-icon">
+                  <svg width="24" height="24" class="icon">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
@@ -470,7 +470,7 @@
 
               <li class="footer-social-item">
                 <a href="" class="footer-social-link">
-                  <svg width="24" height="24" class="footer-icon">
+                  <svg width="24" height="24" class="icon">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
